crates/tokmd-format/tests/analysis_format/snapshots/analysis_format__snapshot_analysis_w50__snapshot_json_receipt.snap
---
source: crates/tokmd-format/tests/analysis_format/snapshot_analysis_w50.rs
assertion_line: 259
expression: v
---
{
  "api_surface": null,
  "archetype": null,
  "args": {
    "format": "md",
    "git": null,
    "import_granularity": "module",
    "max_bytes": null,
    "max_commit_files": null,
    "max_commits": null,
    "max_file_bytes": null,
    "max_files": null,
    "preset": "receipt",
    "window_tokens": null
  },
  "assets": null,
  "complexity": null,
  "corporate_fingerprint": null,
  "deps": null,
  "derived": {
    "boilerplate": {
      "infra_langs": [
        "TOML"
      ],
      "infra_lines": 200,
      "logic_lines": 1800,
      "ratio": 0.1
    },
    "cocomo": null,
    "context_window": null,
    "distribution": {
      "count": 10,
      "gini": 0.35,
      "max": 500,
      "mean": 200.0,
      "median": 180.0,
      "min": 20,
      "p90": 450.0,
      "p99": 500.0
    },
    "doc_density": {
      "by_lang": [
        {
          "denominator": 2000,
          "key": "Rust",
          "numerator": 300,
          "ratio": 0.15
        }
      ],
      "by_module": [],
      "total": {
        "denominator": 2000,
        "key": "total",
        "numerator": 300,
        "ratio": 0.15
      }
    },
    "histogram": [
      {
        "files": 4,
        "label": "0–100",
        "max": 100,
        "min": 0,
        "pct": 0.4
      },
      {
        "files": 6,
        "label": "101–500",
        "max": 500,
        "min": 101,
        "pct": 0.6
      }
    ],
    "integrity": {
      "algo": "blake3",
      "entries": 10,
      "hash": "abc123def456"
    },
    "lang_purity": {
      "rows": []
    },
    "max_file": {
      "by_lang": [],
      "by_module": [],
      "overall": {
        "blanks": 40,
        "bytes": 18000,
        "bytes_per_line": 29.03,
        "code": 500,
        "comments": 80,
        "depth": 1,
        "doc_pct": 0.16,
        "lang": "Rust",
        "lines": 620,
        "module": "src",
        "path": "src/lib.rs",
        "tokens": 1250
      }
    },
    "nesting": {
      "avg": 1.5,
      "by_module": [],
      "max": 3
    },
    "polyglot": {
      "dominant_lang": "Rust",
      "dominant_lines": 1800,
      "dominant_pct": 0.9,
      "entropy": 0.45,
      "lang_count": 2
    },
    "reading_time": {
      "basis_lines": 2500,
      "lines_per_minute": 200,
      "minutes": 12.5
    },
    "test_density": {
      "prod_files": 7,
      "prod_lines": 2100,
      "ratio": 0.19,
      "test_files": 3,
      "test_lines": 400
    },
    "todo": null,
    "top": {
      "largest_bytes": [
        {
          "blanks": 40,
          "bytes": 18000,
          "bytes_per_line": 29.03,
          "code": 500,
          "comments": 80,
          "depth": 1,
          "doc_pct": 0.16,
          "lang": "Rust",
          "lines": 620,
          "module": "src",
          "path": "src/lib.rs",
          "tokens": 1250
        }
      ],
      "largest_lines": [
        {
          "blanks": 40,
          "bytes": 18000,
          "bytes_per_line": 29.03,
          "code": 500,
          "comments": 80,
          "depth": 1,
          "doc_pct": 0.16,
          "lang": "Rust",
          "lines": 620,
          "module": "src",
          "path": "src/lib.rs",
          "tokens": 1250
        }
      ],
      "largest_tokens": [
        {
          "blanks": 40,
          "bytes": 18000,
          "bytes_per_line": 29.03,
          "code": 500,
          "comments": 80,
          "depth": 1,
          "doc_pct": 0.16,
          "lang": "Rust",
          "lines": 620,
          "module": "src",
          "path": "src/lib.rs",
          "tokens": 1250
        }
      ],
      "least_documented": [
        {
          "blanks": 40,
          "bytes": 18000,
          "bytes_per_line": 29.03,
          "code": 500,
          "comments": 80,
          "depth": 1,
          "doc_pct": 0.16,
          "lang": "Rust",
          "lines": 620,
          "module": "src",
          "path": "src/lib.rs",
          "tokens": 1250
        }
      ],
      "most_dense": [
        {
          "blanks": 40,
          "bytes": 18000,
          "bytes_per_line": 29.03,
          "code": 500,
          "comments": 80,
          "depth": 1,
          "doc_pct": 0.16,
          "lang": "Rust",
          "lines": 620,
          "module": "src",
          "path": "src/lib.rs",
          "tokens": 1250
        }
      ]
    },
    "totals": {
      "blanks": 200,
      "bytes": 75000,
      "code": 2000,
      "comments": 300,
      "files": 10,
      "lines": 2500,
      "tokens": 5000
    },
    "tree": null,
    "verbosity": {
      "by_lang": [],
      "by_module": [],
      "total": {
        "denominator": 2500,
        "key": "total",
        "numerator": 75000,
        "rate": 30.0
      }
    },
    "whitespace": {
      "by_lang": [],
      "by_module": [],
      "total": {
        "denominator": 2300,
        "key": "total",
        "numerator": 200,
        "ratio": 0.087
      }
    }
  },
  "dup": null,
  "effort": null,
  "entropy": null,
  "fun": null,
  "generated_at_ms": 0,
  "git": null,
  "imports": null,
  "license": null,
  "mode": "analyze",
  "predictive_churn": null,
  "schema_version": 9,
  "source": {
    "base_receipt_path": null,
    "base_signature": null,
    "children": "collapse",
    "export_generated_at_ms": null,
    "export_path": null,
    "export_schema_version": null,
    "inputs": [
      "."
    ],
    "module_depth": 1,
    "module_roots": []
  },
  "status": "complete",
  "tool": {
    "name": "tokmd",
    "version": "0.0.0-test"
  },
  "topics": null,
  "warnings": []
}
