crates/tokmd-format/tests/analysis_format/snapshots/analysis_format__snapshot_analysis_w50__snapshot_md_empty_receipt.snap
---
source: crates/tokmd-format/tests/analysis_format/snapshot_analysis_w50.rs
assertion_line: 278
expression: text
---
# tokmd analysis

Preset: `receipt`

## Inputs

- `.`
