crates/tokmd-format/tests/analysis_format/snapshots/analysis_format__snapshot_analysis_w50__snapshot_xml_archetype_license.snap
---
source: crates/tokmd-format/tests/analysis_format/snapshot_analysis_w50.rs
assertion_line: 487
expression: text
---
<analysis></analysis>
