crates/tokmd-format/tests/analysis_format/snapshots/analysis_format__snapshot_analysis_w50__snapshot_xml_empty_receipt.snap
---
source: crates/tokmd-format/tests/analysis_format/snapshot_analysis_w50.rs
assertion_line: 293
expression: text
---
<analysis></analysis>
